Added tests + seperated folders to src and tests

--- a/BackEnd/Dockerfile
+++ b/BackEnd/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.11.0
 COPY req.txt .
 RUN pip install -r req.txt
-
-COPY *.py /
+RUN mkdir src/
+COPY src/*.py /src/
+COPY tests/*.py /src/
+WORKDIR /src/
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
-
