initial frontend commit with a test home page. updated dockerfile and docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,7 @@ services:
                 ports:
                 -  27017:27017
                 restart: unless-stopped
+        frontend:
+                 build: ./FrontEnd
+                 ports:
+                        - 8501:8501
