allowed mount from host machine

--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.11.0
 COPY req.txt .
 RUN pip install -r req.txt
-RUN mkdir src/
-COPY src/* /src/
+#RUN mkdir srcc/
+#COPY src/* /srcc/
 #COPY tests/*.py /src/
 WORKDIR /src/
 ENTRYPOINT ["streamlit", "run"]
