--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,5 @@ services:
                  build: ./FrontEnd
                  ports:
                         - 8501:8501
+                 volumes:
+                        - ./FrontEnd/src/:/src/
